@@ -53,6 +53,7 @@ class TableWriterSpec extends SparkCassandraITFlatSpecBase {
     session.execute(s"""CREATE TABLE IF NOT EXISTS "$ks".counters2 (pkey INT PRIMARY KEY, c counter)""")
     session.execute(s"""CREATE TABLE IF NOT EXISTS "$ks".\"camelCase\" (\"primaryKey\" INT PRIMARY KEY, \"textValue\" text)""")
     session.execute(s"""CREATE TABLE IF NOT EXISTS "$ks".single_column (pk INT PRIMARY KEY)""")
+    session.execute(s"""CREATE TABLE IF NOT EXISTS "$ks".map_tuple (a TEXT, b TEXT, c TEXT, PRIMARY KEY (a))""")
 
     session.execute(s"""CREATE TYPE "$ks".address (street text, city text, zip int)""")
     session.execute(s"""CREATE TABLE IF NOT EXISTS "$ks".udts(key INT PRIMARY KEY, name text, addr frozen<address>)""")
@@ -491,6 +492,55 @@ class TableWriterSpec extends SparkCassandraITFlatSpecBase {
       "key" as "devil", "group" as "cat", "value"
     ))
     verifyKeyValueTable("key_value_17")
+  }
+
+  it should "write an RDD of tuples mapped to different ordering of fields" in {
+    val col = Seq (("x","a","b"))
+    sc.parallelize(col)
+      .saveToCassandra(ks,
+        "map_tuple",
+        SomeColumns(("a" as "_2"), ("c" as "_1")))
+    conn.withSessionDo { session =>
+      val result = session.execute(s"""SELECT * FROM "$ks".map_tuple""").all()
+      result should have size 1
+      val row = result(0)
+      row.getString("a") should be ("a")
+      row.getString("c") should be ("x")
+    }
+  }
+
+  it should "write an RDD of tuples with only some fields aliased" in {
+     val col = Seq (("c","a","b"))
+    sc.parallelize(col)
+      .saveToCassandra(ks,
+        "map_tuple",
+        SomeColumns(("a" as "_2"),("b" as "_3"), ("c" as "_1")))
+    conn.withSessionDo { session =>
+      val result = session.execute(s"""SELECT * FROM "$ks".map_tuple""").all()
+      result should have size 1
+      val row = result(0)
+      row.getString("a") should be ("a")
+      row.getString("b") should be ("b")
+      row.getString("c") should be ("c")
+    }
+  }
+
+  it should "throw an exception if you try to alias tuple fields which don't exist" in {
+    val col = Seq (("c"))
+    intercept[IllegalArgumentException] {
+      sc.parallelize(col).saveToCassandra(ks,
+        "map_tuple",
+        SomeColumns(("a" as "_2"),("b" as "_3"), ("c" as "_1")))
+    }
+  }
+
+  it should "throw an exception when aliasing some tuple fields explicitly and others implicitly" in {
+    val col = Seq (("c","a"))
+    intercept[IllegalArgumentException] {
+      sc.parallelize(col).saveToCassandra(ks,
+        "map_tuple",
+        SomeColumns(("a" as "_2"),("b")))
+    }
   }
 
   it should "write RDD of objects with inherited fields" in {
